--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "make test-cov",
     "postinstall": "tsd reinstall && gulp ts"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/locator-kn/ark-realtime.git"
+  },
   "peerDependencies": {
     "hapi": ">=8.x.x"
   },
