--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-notifier": "^4.1.2"
   },
   "dependencies": {
+    "boom": "^2.8.0",
     "socket.io": "^1.3.5",
     "typescript": "^1.5.0-alpha"
   }
