--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "boom": "^2.8.0",
     "socket.io": "^1.3.5",
+    "statehood": "^2.1.1",
     "typescript": "^1.5.0-alpha"
   }
 }
