--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "boom": "^2.8.0",
+    "lodash": "^3.10.0",
     "socket.io": "^1.3.5",
     "statehood": "^2.1.1",
     "typescript": "^1.5.0-alpha"
