--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "boom": "^2.8.0",
     "lodash": "^3.10.0",
     "socket.io": "^1.3.5",
+    "socket.io-redis": "^0.1.4",
     "statehood": "^2.1.1",
     "typescript": "^1.5.0-alpha"
   }
